samples/_failures_safe/1761089271_beda73_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c821b425.c: In function ‘main’:
./samples/SAFE/__tmp_c821b425.c:148:21: error: expected expression at end of input
  148 |                     for (int j =
      |                     ^~~
./samples/SAFE/__tmp_c821b425.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c821b425.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c821b425.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c821b425.c:148:21: error: expected declaration or statement at end of input
